// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gen.float().between(-10, -1).betweenPrecision(0, 2) 1`] = `
"-2.9 (c = 90)
..-2 (c = 0)
..-2.4 (c = 40)
....-2.2 (c = 20)
......-2.1 (c = 10)
....-2.3 (c = 30)
......-2.1 (c = 10)
..-2.6 (c = 60)
....-2.3 (c = 30)
......-2.1 (c = 10)
......-2.2 (c = 20)
....-2.5 (c = 50)
......-2.2 (c = 20)
........-2.1 (c = 10)
..-2.7 (c = 70)
....-2.3 (c = 30)
......-2.1 (c = 10)
......-2.2 (c = 20)
....-2.5 (c = 50)
......-2.2 (c = 20)
........-2.1 (c = 10)
..-2.8 (c = 80)"
`;

exports[`Gen.float().between(-10, -1).betweenPrecision(0, 2) 2`] = `
"-7 (c = 157.14285714285714)
..-3 (c = 100)
....-2 (c = 0)
..-5 (c = 128.57142857142858)
....-4 (c = 114.28571428571429)
......-3 (c = 14.285714285714286)
....-4 (c = 28.571428571428573)
..-6 (c = 142.85714285714286)
....-4 (c = 114.28571428571429)
......-3 (c = 14.285714285714286)
....-5 (c = 42.857142857142854)
..-6 (c = 57.142857142857146)"
`;

exports[`Gen.float().between(-10, -1).betweenPrecision(0, 2) 3`] = `
"-3.2 (c = 34.285714285714285)
..-2.2 (c = 20)
....-2 (c = 0)
....-2.1 (c = 10)
..-3 (c = 14.285714285714286)
..-3.1 (c = 24.285714285714285)"
`;

exports[`Gen.float().between(-10, -1).betweenPrecision(0, 2) 4`] = `
"-5.3 (c = 72.85714285714286)
..-2.3 (c = 30)
....-2 (c = 0)
....-2.1 (c = 10)
....-2.2 (c = 20)
..-3.3 (c = 44.285714285714285)
....-3 (c = 14.285714285714286)
....-3.1 (c = 24.285714285714285)
....-3.2 (c = 34.285714285714285)
..-4.3 (c = 58.57142857142857)
....-4 (c = 28.571428571428573)
....-4.1 (c = 38.57142857142857)
....-4.2 (c = 48.57142857142857)
..-5 (c = 42.857142857142854)
..-5.1 (c = 52.857142857142854)
..-5.2 (c = 62.857142857142854)"
`;

exports[`Gen.float().between(-10, -1).betweenPrecision(0, 2) 5`] = `
"-6.4 (c = 97.14285714285714)
..-2.4 (c = 40)
....-2 (c = 0)
....-2.2 (c = 20)
......-2.1 (c = 10)
....-2.3 (c = 30)
......-2.1 (c = 10)
..-4.4 (c = 68.57142857142857)
....-3.4 (c = 54.285714285714285)
......-3 (c = 14.285714285714286)
......-3.2 (c = 34.285714285714285)
........-3.1 (c = 24.285714285714285)
......-3.3 (c = 44.285714285714285)
........-3.1 (c = 24.285714285714285)
....-4 (c = 28.571428571428573)
....-4.2 (c = 48.57142857142857)
......-4.1 (c = 38.57142857142857)
....-4.3 (c = 58.57142857142857)
......-4.1 (c = 38.57142857142857)
..-5.4 (c = 82.85714285714286)
....-3.4 (c = 54.285714285714285)
......-3 (c = 14.285714285714286)
......-3.2 (c = 34.285714285714285)
........-3.1 (c = 24.285714285714285)
......-3.3 (c = 44.285714285714285)
........-3.1 (c = 24.285714285714285)
....-5 (c = 42.857142857142854)
....-5.2 (c = 62.857142857142854)
......-5.1 (c = 52.857142857142854)
....-5.3 (c = 72.85714285714286)
......-5.1 (c = 52.857142857142854)
..-6 (c = 57.142857142857146)
..-6.2 (c = 77.14285714285714)
....-6.1 (c = 67.14285714285714)
..-6.3 (c = 87.14285714285714)
....-6.1 (c = 67.14285714285714)"
`;

exports[`Gen.float().between(-10, -1).betweenPrecision(0, 2) 6`] = `
"-5 (c = 42.857142857142854)
..-2 (c = 0)
..-3 (c = 14.285714285714286)
..-4 (c = 28.571428571428573)"
`;

exports[`Gen.float().between(-10, -1).betweenPrecision(0, 2) 7`] = `
"-7 (c = 157.14285714285714)
..-3 (c = 100)
....-2 (c = 0)
..-5 (c = 128.57142857142858)
....-4 (c = 114.28571428571429)
......-3 (c = 14.285714285714286)
....-4 (c = 28.571428571428573)
..-6 (c = 142.85714285714286)
....-4 (c = 114.28571428571429)
......-3 (c = 14.285714285714286)
....-5 (c = 42.857142857142854)
..-6 (c = 57.142857142857146)"
`;

exports[`Gen.float().between(-10, -1).betweenPrecision(0, 2) 8`] = `
"-6.3 (c = 87.14285714285714)
..-2.3 (c = 30)
....-2 (c = 0)
....-2.1 (c = 10)
....-2.2 (c = 20)
..-4.3 (c = 58.57142857142857)
....-3.3 (c = 44.285714285714285)
......-3 (c = 14.285714285714286)
......-3.1 (c = 24.285714285714285)
......-3.2 (c = 34.285714285714285)
....-4 (c = 28.571428571428573)
....-4.1 (c = 38.57142857142857)
....-4.2 (c = 48.57142857142857)
..-5.3 (c = 72.85714285714286)
....-3.3 (c = 44.285714285714285)
......-3 (c = 14.285714285714286)
......-3.1 (c = 24.285714285714285)
......-3.2 (c = 34.285714285714285)
....-5 (c = 42.857142857142854)
....-5.1 (c = 52.857142857142854)
....-5.2 (c = 62.857142857142854)
..-6 (c = 57.142857142857146)
..-6.1 (c = 67.14285714285714)
..-6.2 (c = 77.14285714285714)"
`;

exports[`Gen.float().between(-10, -1).betweenPrecision(0, 2) 9`] = `
"-3 (c = 14.285714285714286)
..-2 (c = 0)"
`;

exports[`Gen.float().between(-10, -1).betweenPrecision(0, 2) 10`] = `
"-6.2 (c = 77.14285714285714)
..-2.2 (c = 20)
....-2 (c = 0)
....-2.1 (c = 10)
..-4.2 (c = 48.57142857142857)
....-3.2 (c = 34.285714285714285)
......-3 (c = 14.285714285714286)
......-3.1 (c = 24.285714285714285)
....-4 (c = 28.571428571428573)
....-4.1 (c = 38.57142857142857)
..-5.2 (c = 62.857142857142854)
....-3.2 (c = 34.285714285714285)
......-3 (c = 14.285714285714286)
......-3.1 (c = 24.285714285714285)
....-5 (c = 42.857142857142854)
....-5.1 (c = 52.857142857142854)
..-6 (c = 57.142857142857146)
..-6.1 (c = 67.14285714285714)"
`;

exports[`Gen.float().between(-10, -1).betweenPrecision(0, 2) 11`] = `
"-4.8 (c = 108.57142857142857)
..-2.8 (c = 80)
....-2 (c = 0)
....-2.4 (c = 40)
......-2.2 (c = 20)
........-2.1 (c = 10)
......-2.3 (c = 30)
........-2.1 (c = 10)
....-2.6 (c = 60)
......-2.3 (c = 30)
........-2.1 (c = 10)
........-2.2 (c = 20)
......-2.5 (c = 50)
........-2.2 (c = 20)
..........-2.1 (c = 10)
....-2.7 (c = 70)
......-2.3 (c = 30)
........-2.1 (c = 10)
........-2.2 (c = 20)
......-2.5 (c = 50)
........-2.2 (c = 20)
..........-2.1 (c = 10)
..-3.8 (c = 94.28571428571429)
....-3 (c = 14.285714285714286)
....-3.4 (c = 54.285714285714285)
......-3.2 (c = 34.285714285714285)
........-3.1 (c = 24.285714285714285)
......-3.3 (c = 44.285714285714285)
........-3.1 (c = 24.285714285714285)
....-3.6 (c = 74.28571428571429)
......-3.3 (c = 44.285714285714285)
........-3.1 (c = 24.285714285714285)
........-3.2 (c = 34.285714285714285)
......-3.5 (c = 64.28571428571429)
........-3.2 (c = 34.285714285714285)
..........-3.1 (c = 24.285714285714285)
....-3.7 (c = 84.28571428571429)
......-3.3 (c = 44.285714285714285)
........-3.1 (c = 24.285714285714285)
........-3.2 (c = 34.285714285714285)
......-3.5 (c = 64.28571428571429)
........-3.2 (c = 34.285714285714285)
..........-3.1 (c = 24.285714285714285)
..-4 (c = 28.571428571428573)
..-4.4 (c = 68.57142857142857)
....-4.2 (c = 48.57142857142857)
......-4.1 (c = 38.57142857142857)
....-4.3 (c = 58.57142857142857)
......-4.1 (c = 38.57142857142857)
..-4.6 (c = 88.57142857142857)
....-4.3 (c = 58.57142857142857)
......-4.1 (c = 38.57142857142857)
......-4.2 (c = 48.57142857142857)
....-4.5 (c = 78.57142857142857)
......-4.2 (c = 48.57142857142857)
........-4.1 (c = 38.57142857142857)
..-4.7 (c = 98.57142857142857)
....-4.3 (c = 58.57142857142857)
......-4.1 (c = 38.57142857142857)
......-4.2 (c = 48.57142857142857)
....-4.5 (c = 78.57142857142857)
......-4.2 (c = 48.57142857142857)
........-4.1 (c = 38.57142857142857)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(0, 2): 0 1`] = `
"5.9 (c = 140)
..1.9 (c = 90)
....1 (c = 0)
....1.4 (c = 40)
......1.2 (c = 20)
........1.1 (c = 10)
......1.3 (c = 30)
........1.1 (c = 10)
....1.6 (c = 60)
......1.3 (c = 30)
........1.1 (c = 10)
........1.2 (c = 20)
......1.5 (c = 50)
........1.2 (c = 20)
..........1.1 (c = 10)
....1.7 (c = 70)
......1.3 (c = 30)
........1.1 (c = 10)
........1.2 (c = 20)
......1.5 (c = 50)
........1.2 (c = 20)
..........1.1 (c = 10)
....1.8 (c = 80)
..3.9 (c = 115)
....2.9 (c = 102.5)
......2 (c = 12.5)
......2.4 (c = 52.5)
........2.2 (c = 32.5)
..........2.1 (c = 22.5)
........2.3 (c = 42.5)
..........2.1 (c = 22.5)
......2.6 (c = 72.5)
........2.3 (c = 42.5)
..........2.1 (c = 22.5)
..........2.2 (c = 32.5)
........2.5 (c = 62.5)
..........2.2 (c = 32.5)
............2.1 (c = 22.5)
......2.7 (c = 82.5)
........2.3 (c = 42.5)
..........2.1 (c = 22.5)
..........2.2 (c = 32.5)
........2.5 (c = 62.5)
..........2.2 (c = 32.5)
............2.1 (c = 22.5)
......2.8 (c = 92.5)
....3 (c = 25)
....3.4 (c = 65)
......3.2 (c = 45)
........3.1 (c = 35)
......3.3 (c = 55)
........3.1 (c = 35)
....3.6 (c = 85)
......3.3 (c = 55)
........3.1 (c = 35)
........3.2 (c = 45)
......3.5 (c = 75)
........3.2 (c = 45)
..........3.1 (c = 35)
....3.7 (c = 95)
......3.3 (c = 55)
........3.1 (c = 35)
........3.2 (c = 45)
......3.5 (c = 75)
........3.2 (c = 45)
..........3.1 (c = 35)
....3.8 (c = 105)
..4.9 (c = 127.5)
....2.9 (c = 102.5)
......2 (c = 12.5)
......2.4 (c = 52.5)
........2.2 (c = 32.5)
..........2.1 (c = 22.5)
........2.3 (c = 42.5)
..........2.1 (c = 22.5)
......2.6 (c = 72.5)
........2.3 (c = 42.5)
..........2.1 (c = 22.5)
..........2.2 (c = 32.5)
........2.5 (c = 62.5)
..........2.2 (c = 32.5)
............2.1 (c = 22.5)
......2.7 (c = 82.5)
........2.3 (c = 42.5)
..........2.1 (c = 22.5)
..........2.2 (c = 32.5)
........2.5 (c = 62.5)
..........2.2 (c = 32.5)
............2.1 (c = 22.5)
......2.8 (c = 92.5)
....4 (c = 37.5)
....4.4 (c = 77.5)
......4.2 (c = 57.5)
........4.1 (c = 47.5)
......4.3 (c = 67.5)
........4.1 (c = 47.5)
....4.6 (c = 97.5)
......4.3 (c = 67.5)
........4.1 (c = 47.5)
........4.2 (c = 57.5)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(0, 2): 1 1`] = `
"2 (c = 100)
..1 (c = 0)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(0, 2): 2 1`] = `
"4.2 (c = 57.5)
..1.2 (c = 20)
....1 (c = 0)
....1.1 (c = 10)
..2.2 (c = 32.5)
....2 (c = 12.5)
....2.1 (c = 22.5)
..3.2 (c = 45)
....3 (c = 25)
....3.1 (c = 35)
..4 (c = 37.5)
..4.1 (c = 47.5)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(0, 2): 3 1`] = `
"2.3 (c = 42.5)
..1.3 (c = 30)
....1 (c = 0)
....1.1 (c = 10)
....1.2 (c = 20)
..2 (c = 12.5)
..2.1 (c = 22.5)
..2.2 (c = 32.5)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(0, 2): 4 1`] = `
"1.4 (c = 40)
..1 (c = 0)
..1.2 (c = 20)
....1.1 (c = 10)
..1.3 (c = 30)
....1.1 (c = 10)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(0, 2): 5 1`] = `
"2 (c = 12.5)
..1 (c = 0)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(0, 2): 6 1`] = `
"2 (c = 100)
..1 (c = 0)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(0, 2): 7 1`] = `
"1.3 (c = 30)
..1 (c = 0)
..1.1 (c = 10)
..1.2 (c = 20)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(0, 2): 8 1`] = `
"4 (c = 37.5)
..1 (c = 0)
..2 (c = 12.5)
..3 (c = 25)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(0, 2): 9 1`] = `
"1.2 (c = 20)
..1 (c = 0)
..1.1 (c = 10)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(0, 2): 10 1`] = `
"3.8 (c = 105)
..1.8 (c = 80)
....1 (c = 0)
....1.4 (c = 40)
......1.2 (c = 20)
........1.1 (c = 10)
......1.3 (c = 30)
........1.1 (c = 10)
....1.6 (c = 60)
......1.3 (c = 30)
........1.1 (c = 10)
........1.2 (c = 20)
......1.5 (c = 50)
........1.2 (c = 20)
..........1.1 (c = 10)
....1.7 (c = 70)
......1.3 (c = 30)
........1.1 (c = 10)
........1.2 (c = 20)
......1.5 (c = 50)
........1.2 (c = 20)
..........1.1 (c = 10)
..2.8 (c = 92.5)
....2 (c = 12.5)
....2.4 (c = 52.5)
......2.2 (c = 32.5)
........2.1 (c = 22.5)
......2.3 (c = 42.5)
........2.1 (c = 22.5)
....2.6 (c = 72.5)
......2.3 (c = 42.5)
........2.1 (c = 22.5)
........2.2 (c = 32.5)
......2.5 (c = 62.5)
........2.2 (c = 32.5)
..........2.1 (c = 22.5)
....2.7 (c = 82.5)
......2.3 (c = 42.5)
........2.1 (c = 22.5)
........2.2 (c = 32.5)
......2.5 (c = 62.5)
........2.2 (c = 32.5)
..........2.1 (c = 22.5)
..3 (c = 25)
..3.4 (c = 65)
....3.2 (c = 45)
......3.1 (c = 35)
....3.3 (c = 55)
......3.1 (c = 35)
..3.6 (c = 85)
....3.3 (c = 55)
......3.1 (c = 35)
......3.2 (c = 45)
....3.5 (c = 75)
......3.2 (c = 45)
........3.1 (c = 35)
..3.7 (c = 95)
....3.3 (c = 55)
......3.1 (c = 35)
......3.2 (c = 45)
....3.5 (c = 75)
......3.2 (c = 45)
........3.1 (c = 35)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(1, 2): 0 1`] = `
"5.57 (c = 107)
..1.57 (c = 57)
....1.28 (c = 28)
......1.14 (c = 14)
........1.07 (c = 7)
..........1.05 (c = 5)
..........1.06 (c = 6)
........1.1 (c = 10)
..........1.05 (c = 5)
..........1.08 (c = 8)
............1.06 (c = 6)
..........1.09 (c = 9)
............1.06 (c = 6)
........1.12 (c = 12)
..........1.06 (c = 6)
............1.05 (c = 5)
..........1.09 (c = 9)
............1.08 (c = 8)
..........1.11 (c = 11)
............1.05 (c = 5)
............1.08 (c = 8)
........1.13 (c = 13)
..........1.06 (c = 6)
............1.05 (c = 5)
..........1.09 (c = 9)
............1.08 (c = 8)
..........1.11 (c = 11)
............1.05 (c = 5)
............1.08 (c = 8)
......1.21 (c = 21)
........1.1 (c = 10)
..........1.05 (c = 5)
..........1.07 (c = 7)
............1.06 (c = 6)
..........1.08 (c = 8)
............1.06 (c = 6)
..........1.09 (c = 9)
............1.06 (c = 6)
........1.15 (c = 15)
..........1.07 (c = 7)
............1.05 (c = 5)
............1.06 (c = 6)
..........1.11 (c = 11)
............1.05 (c = 5)
............1.08 (c = 8)
..............1.06 (c = 6)
............1.09 (c = 9)
..............1.06 (c = 6)
..........1.13 (c = 13)
............1.06 (c = 6)
..............1.05 (c = 5)
............1.09 (c = 9)
..............1.08 (c = 8)
............1.12 (c = 12)
........1.18 (c = 18)
..........1.09 (c = 9)
............1.06 (c = 6)
..............1.05 (c = 5)
............1.07 (c = 7)
..............1.05 (c = 5)
............1.08 (c = 8)
..........1.13 (c = 13)
............1.06 (c = 6)
..............1.05 (c = 5)
............1.11 (c = 11)
..............1.05 (c = 5)
..............1.08 (c = 8)
................1.07 (c = 7)
............1.12 (c = 12)
..........1.16 (c = 16)
............1.08 (c = 8)
..............1.06 (c = 6)
................1.05 (c = 5)
..............1.07 (c = 7)
................1.05 (c = 5)
............1.12 (c = 12)
..............1.06 (c = 6)
................1.05 (c = 5)
..............1.11 (c = 11)
................1.05 (c = 5)
..........1.17 (c = 17)
............1.08 (c = 8)
..............1.06 (c = 6)
................1.05 (c = 5)
..............1.07 (c = 7)
................1.05 (c = 5)
............1.12 (c = 12)
..............1.06 (c = 6)
................1.05 (c = 5)
..............1.11 (c = 11)
................1.05 (c = 5)
........1.19 (c = 19)
..........1.09 (c = 9)
............1.06 (c = 6)
..............1.05 (c = 5)
............1.07 (c = 7)
..............1.05 (c = 5)
............1.08 (c = 8)
..........1.16 (c = 16)
............1.08 (c = 8)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(1, 2): 1 1`] = `
"1.2 (c = 20)
..1.1 (c = 10)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(1, 2): 2 1`] = `
"4.6 (c = 97.5)
..1.6 (c = 60)
....1.3 (c = 30)
......1.15 (c = 15)
........1.07 (c = 7)
..........1.05 (c = 5)
..........1.06 (c = 6)
........1.11 (c = 11)
..........1.05 (c = 5)
..........1.08 (c = 8)
............1.06 (c = 6)
..........1.09 (c = 9)
............1.06 (c = 6)
..........1.1 (c = 10)
........1.13 (c = 13)
..........1.06 (c = 6)
............1.05 (c = 5)
..........1.09 (c = 9)
............1.08 (c = 8)
..........1.12 (c = 12)
............1.1 (c = 10)
..............1.05 (c = 5)
..............1.08 (c = 8)
........1.14 (c = 14)
..........1.1 (c = 10)
............1.05 (c = 5)
............1.08 (c = 8)
..............1.06 (c = 6)
............1.09 (c = 9)
..............1.06 (c = 6)
..........1.12 (c = 12)
............1.06 (c = 6)
..............1.05 (c = 5)
............1.09 (c = 9)
..............1.08 (c = 8)
......1.22 (c = 22)
........1.11 (c = 11)
..........1.05 (c = 5)
..........1.08 (c = 8)
............1.06 (c = 6)
............1.07 (c = 7)
..........1.09 (c = 9)
............1.06 (c = 6)
............1.07 (c = 7)
..........1.1 (c = 10)
............1.07 (c = 7)
..............1.06 (c = 6)
........1.16 (c = 16)
..........1.08 (c = 8)
............1.06 (c = 6)
..............1.05 (c = 5)
............1.07 (c = 7)
..............1.05 (c = 5)
..........1.12 (c = 12)
............1.06 (c = 6)
..............1.05 (c = 5)
............1.09 (c = 9)
..............1.07 (c = 7)
................1.05 (c = 5)
............1.1 (c = 10)
..............1.05 (c = 5)
..............1.07 (c = 7)
..........1.14 (c = 14)
............1.07 (c = 7)
..............1.05 (c = 5)
..............1.06 (c = 6)
............1.1 (c = 10)
..............1.05 (c = 5)
..............1.09 (c = 9)
................1.06 (c = 6)
............1.13 (c = 13)
..............1.06 (c = 6)
................1.05 (c = 5)
..............1.09 (c = 9)
........1.19 (c = 19)
..........1.09 (c = 9)
............1.06 (c = 6)
..............1.05 (c = 5)
............1.07 (c = 7)
..............1.05 (c = 5)
............1.08 (c = 8)
..........1.14 (c = 14)
............1.07 (c = 7)
..............1.05 (c = 5)
..............1.06 (c = 6)
............1.1 (c = 10)
..............1.05 (c = 5)
..............1.08 (c = 8)
................1.06 (c = 6)
............1.12 (c = 12)
..............1.06 (c = 6)
................1.05 (c = 5)
............1.13 (c = 13)
..............1.06 (c = 6)
................1.05 (c = 5)
..........1.17 (c = 17)
............1.08 (c = 8)
..............1.06 (c = 6)
................1.05 (c = 5)
..............1.07 (c = 7)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(1, 2): 3 1`] = `
"2.33 (c = 45.5)
..1.33 (c = 33)
....1.16 (c = 16)
......1.08 (c = 8)
........1.06 (c = 6)
..........1.05 (c = 5)
........1.07 (c = 7)
..........1.05 (c = 5)
......1.12 (c = 12)
........1.06 (c = 6)
..........1.05 (c = 5)
........1.09 (c = 9)
..........1.07 (c = 7)
............1.05 (c = 5)
........1.1 (c = 10)
..........1.05 (c = 5)
..........1.07 (c = 7)
........1.11 (c = 11)
..........1.05 (c = 5)
......1.14 (c = 14)
........1.07 (c = 7)
..........1.05 (c = 5)
..........1.06 (c = 6)
........1.1 (c = 10)
..........1.05 (c = 5)
..........1.09 (c = 9)
............1.06 (c = 6)
........1.13 (c = 13)
..........1.06 (c = 6)
............1.05 (c = 5)
..........1.09 (c = 9)
..........1.11 (c = 11)
............1.05 (c = 5)
......1.15 (c = 15)
........1.07 (c = 7)
..........1.05 (c = 5)
..........1.06 (c = 6)
........1.11 (c = 11)
..........1.05 (c = 5)
..........1.09 (c = 9)
............1.06 (c = 6)
..........1.1 (c = 10)
........1.13 (c = 13)
..........1.06 (c = 6)
............1.05 (c = 5)
..........1.09 (c = 9)
....1.24 (c = 24)
......1.12 (c = 12)
........1.06 (c = 6)
..........1.05 (c = 5)
........1.09 (c = 9)
..........1.07 (c = 7)
............1.05 (c = 5)
..........1.08 (c = 8)
........1.1 (c = 10)
..........1.05 (c = 5)
..........1.07 (c = 7)
..........1.08 (c = 8)
........1.11 (c = 11)
..........1.05 (c = 5)
..........1.08 (c = 8)
............1.07 (c = 7)
......1.18 (c = 18)
........1.09 (c = 9)
..........1.06 (c = 6)
............1.05 (c = 5)
..........1.07 (c = 7)
............1.05 (c = 5)
..........1.08 (c = 8)
........1.13 (c = 13)
..........1.06 (c = 6)
............1.05 (c = 5)
..........1.11 (c = 11)
............1.05 (c = 5)
............1.08 (c = 8)
..............1.07 (c = 7)
............1.1 (c = 10)
..............1.07 (c = 7)
........1.15 (c = 15)
..........1.07 (c = 7)
............1.05 (c = 5)
............1.06 (c = 6)
..........1.11 (c = 11)
............1.05 (c = 5)
............1.08 (c = 8)
..............1.06 (c = 6)
............1.1 (c = 10)
..........1.14 (c = 14)
............1.1 (c = 10)
..............1.05 (c = 5)
..............1.08 (c = 8)
................1.06 (c = 6)
........1.17 (c = 17)
..........1.08 (c = 8)
............1.06 (c = 6)
..............1.05 (c = 5)
............1.07 (c = 7)
..............1.05 (c = 5)
..........1.14 (c = 14)
............1.07 (c = 7)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(1, 2): 4 1`] = `
"1.7 (c = 70)
..1.35 (c = 35)
....1.17 (c = 17)
......1.08 (c = 8)
........1.06 (c = 6)
..........1.05 (c = 5)
........1.07 (c = 7)
..........1.05 (c = 5)
......1.12 (c = 12)
........1.06 (c = 6)
..........1.05 (c = 5)
........1.09 (c = 9)
..........1.07 (c = 7)
............1.05 (c = 5)
........1.1 (c = 10)
..........1.05 (c = 5)
..........1.07 (c = 7)
........1.11 (c = 11)
..........1.05 (c = 5)
......1.14 (c = 14)
........1.07 (c = 7)
..........1.05 (c = 5)
..........1.06 (c = 6)
........1.1 (c = 10)
..........1.05 (c = 5)
..........1.09 (c = 9)
............1.06 (c = 6)
........1.13 (c = 13)
..........1.06 (c = 6)
............1.05 (c = 5)
..........1.09 (c = 9)
..........1.11 (c = 11)
............1.05 (c = 5)
......1.15 (c = 15)
........1.07 (c = 7)
..........1.05 (c = 5)
..........1.06 (c = 6)
........1.11 (c = 11)
..........1.05 (c = 5)
..........1.09 (c = 9)
............1.06 (c = 6)
..........1.1 (c = 10)
........1.13 (c = 13)
..........1.06 (c = 6)
............1.05 (c = 5)
..........1.09 (c = 9)
......1.16 (c = 16)
....1.26 (c = 26)
......1.13 (c = 13)
........1.06 (c = 6)
..........1.05 (c = 5)
........1.09 (c = 9)
..........1.07 (c = 7)
............1.05 (c = 5)
..........1.08 (c = 8)
........1.11 (c = 11)
..........1.05 (c = 5)
..........1.08 (c = 8)
............1.07 (c = 7)
..........1.1 (c = 10)
............1.07 (c = 7)
........1.12 (c = 12)
..........1.1 (c = 10)
............1.05 (c = 5)
............1.07 (c = 7)
............1.08 (c = 8)
......1.19 (c = 19)
........1.09 (c = 9)
..........1.06 (c = 6)
............1.05 (c = 5)
..........1.07 (c = 7)
............1.05 (c = 5)
..........1.08 (c = 8)
........1.14 (c = 14)
..........1.07 (c = 7)
............1.05 (c = 5)
............1.06 (c = 6)
..........1.1 (c = 10)
............1.05 (c = 5)
............1.08 (c = 8)
..............1.06 (c = 6)
..........1.12 (c = 12)
............1.06 (c = 6)
..............1.05 (c = 5)
............1.11 (c = 11)
..............1.05 (c = 5)
..............1.08 (c = 8)
........1.16 (c = 16)
..........1.08 (c = 8)
............1.06 (c = 6)
..............1.05 (c = 5)
............1.07 (c = 7)
..............1.05 (c = 5)
..........1.12 (c = 12)
............1.06 (c = 6)
..............1.05 (c = 5)
............1.1 (c = 10)
..............1.05 (c = 5)
..............1.07 (c = 7)
............1.11 (c = 11)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(1, 2): 5 1`] = `
"2.5 (c = 62.5)
..1.5 (c = 50)
....1.2 (c = 20)
......1.1 (c = 10)
....1.3 (c = 30)
......1.1 (c = 10)
....1.4 (c = 40)
..2.2 (c = 32.5)
....2.1 (c = 22.5)
..2.3 (c = 42.5)
....2.1 (c = 22.5)
..2.4 (c = 52.5)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(1, 2): 6 1`] = `
"1.8 (c = 80)
..1.4 (c = 40)
....1.2 (c = 20)
......1.1 (c = 10)
....1.3 (c = 30)
......1.1 (c = 10)
..1.6 (c = 60)
....1.3 (c = 30)
......1.1 (c = 10)
......1.2 (c = 20)
....1.5 (c = 50)
......1.2 (c = 20)
........1.1 (c = 10)
..1.7 (c = 70)
....1.3 (c = 30)
......1.1 (c = 10)
......1.2 (c = 20)
....1.5 (c = 50)
......1.2 (c = 20)
........1.1 (c = 10)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(1, 2): 7 1`] = `
"1.6 (c = 60)
..1.3 (c = 30)
....1.15 (c = 15)
......1.07 (c = 7)
........1.05 (c = 5)
........1.06 (c = 6)
......1.11 (c = 11)
........1.05 (c = 5)
........1.08 (c = 8)
..........1.06 (c = 6)
........1.09 (c = 9)
..........1.06 (c = 6)
........1.1 (c = 10)
......1.13 (c = 13)
........1.06 (c = 6)
..........1.05 (c = 5)
........1.09 (c = 9)
..........1.08 (c = 8)
........1.12 (c = 12)
..........1.1 (c = 10)
............1.05 (c = 5)
............1.08 (c = 8)
......1.14 (c = 14)
........1.1 (c = 10)
..........1.05 (c = 5)
..........1.08 (c = 8)
............1.06 (c = 6)
..........1.09 (c = 9)
............1.06 (c = 6)
........1.12 (c = 12)
..........1.06 (c = 6)
............1.05 (c = 5)
..........1.09 (c = 9)
............1.08 (c = 8)
....1.22 (c = 22)
......1.11 (c = 11)
........1.05 (c = 5)
........1.08 (c = 8)
..........1.06 (c = 6)
..........1.07 (c = 7)
........1.09 (c = 9)
..........1.06 (c = 6)
..........1.07 (c = 7)
........1.1 (c = 10)
..........1.07 (c = 7)
............1.06 (c = 6)
......1.16 (c = 16)
........1.08 (c = 8)
..........1.06 (c = 6)
............1.05 (c = 5)
..........1.07 (c = 7)
............1.05 (c = 5)
........1.12 (c = 12)
..........1.06 (c = 6)
............1.05 (c = 5)
..........1.09 (c = 9)
............1.07 (c = 7)
..............1.05 (c = 5)
..........1.1 (c = 10)
............1.05 (c = 5)
............1.07 (c = 7)
........1.14 (c = 14)
..........1.07 (c = 7)
............1.05 (c = 5)
............1.06 (c = 6)
..........1.1 (c = 10)
............1.05 (c = 5)
............1.09 (c = 9)
..............1.06 (c = 6)
..........1.13 (c = 13)
............1.06 (c = 6)
..............1.05 (c = 5)
............1.09 (c = 9)
......1.19 (c = 19)
........1.09 (c = 9)
..........1.06 (c = 6)
............1.05 (c = 5)
..........1.07 (c = 7)
............1.05 (c = 5)
..........1.08 (c = 8)
........1.14 (c = 14)
..........1.07 (c = 7)
............1.05 (c = 5)
............1.06 (c = 6)
..........1.1 (c = 10)
............1.05 (c = 5)
............1.08 (c = 8)
..............1.06 (c = 6)
..........1.12 (c = 12)
............1.06 (c = 6)
..............1.05 (c = 5)
..........1.13 (c = 13)
............1.06 (c = 6)
..............1.05 (c = 5)
........1.17 (c = 17)
..........1.08 (c = 8)
............1.06 (c = 6)
..............1.05 (c = 5)
............1.07 (c = 7)
..............1.05 (c = 5)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(1, 2): 8 1`] = `
"4.1 (c = 47.5)
..1.1 (c = 10)
..2.1 (c = 22.5)
..3.1 (c = 35)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(1, 2): 9 1`] = `
"1.75 (c = 75)
..1.37 (c = 37)
....1.18 (c = 18)
......1.09 (c = 9)
........1.06 (c = 6)
..........1.05 (c = 5)
........1.07 (c = 7)
..........1.05 (c = 5)
........1.08 (c = 8)
......1.13 (c = 13)
........1.06 (c = 6)
..........1.05 (c = 5)
........1.11 (c = 11)
..........1.05 (c = 5)
..........1.08 (c = 8)
............1.07 (c = 7)
..........1.1 (c = 10)
............1.07 (c = 7)
........1.12 (c = 12)
..........1.1 (c = 10)
............1.05 (c = 5)
............1.07 (c = 7)
............1.08 (c = 8)
......1.15 (c = 15)
........1.07 (c = 7)
..........1.05 (c = 5)
..........1.06 (c = 6)
........1.11 (c = 11)
..........1.05 (c = 5)
..........1.08 (c = 8)
............1.06 (c = 6)
..........1.1 (c = 10)
........1.14 (c = 14)
..........1.1 (c = 10)
............1.05 (c = 5)
............1.08 (c = 8)
..............1.06 (c = 6)
..........1.12 (c = 12)
............1.06 (c = 6)
..............1.05 (c = 5)
......1.16 (c = 16)
........1.08 (c = 8)
..........1.06 (c = 6)
............1.05 (c = 5)
..........1.07 (c = 7)
............1.05 (c = 5)
........1.12 (c = 12)
..........1.06 (c = 6)
............1.05 (c = 5)
..........1.1 (c = 10)
............1.05 (c = 5)
............1.07 (c = 7)
..........1.11 (c = 11)
............1.05 (c = 5)
........1.14 (c = 14)
..........1.07 (c = 7)
............1.05 (c = 5)
............1.06 (c = 6)
..........1.1 (c = 10)
............1.05 (c = 5)
......1.17 (c = 17)
........1.08 (c = 8)
..........1.06 (c = 6)
............1.05 (c = 5)
..........1.07 (c = 7)
............1.05 (c = 5)
........1.12 (c = 12)
..........1.06 (c = 6)
............1.05 (c = 5)
..........1.1 (c = 10)
............1.05 (c = 5)
............1.07 (c = 7)
..........1.11 (c = 11)
............1.05 (c = 5)
........1.14 (c = 14)
..........1.07 (c = 7)
............1.05 (c = 5)
............1.06 (c = 6)
..........1.1 (c = 10)
............1.05 (c = 5)
....1.27 (c = 27)
......1.13 (c = 13)
........1.06 (c = 6)
..........1.05 (c = 5)
........1.09 (c = 9)
..........1.07 (c = 7)
............1.05 (c = 5)
..........1.08 (c = 8)
........1.11 (c = 11)
..........1.05 (c = 5)
..........1.08 (c = 8)
............1.07 (c = 7)
..........1.1 (c = 10)
............1.07 (c = 7)
........1.12 (c = 12)
..........1.1 (c = 10)
............1.05 (c = 5)
............1.07 (c = 7)
............1.08 (c = 8)
......1.2 (c = 20)"
`;

exports[`Gen.float().between(0, 10).betweenPrecision(1, 2): 10 1`] = `
"3.17 (c = 42)
..1.17 (c = 17)
....1.08 (c = 8)
......1.06 (c = 6)
........1.05 (c = 5)
......1.07 (c = 7)
........1.05 (c = 5)
....1.12 (c = 12)
......1.06 (c = 6)
........1.05 (c = 5)
......1.09 (c = 9)
........1.07 (c = 7)
..........1.05 (c = 5)
......1.1 (c = 10)
........1.05 (c = 5)
........1.07 (c = 7)
......1.11 (c = 11)
........1.05 (c = 5)
....1.14 (c = 14)
......1.07 (c = 7)
........1.05 (c = 5)
........1.06 (c = 6)
......1.1 (c = 10)
........1.05 (c = 5)
........1.09 (c = 9)
..........1.06 (c = 6)
......1.13 (c = 13)
........1.06 (c = 6)
..........1.05 (c = 5)
........1.09 (c = 9)
........1.11 (c = 11)
..........1.05 (c = 5)
....1.15 (c = 15)
......1.07 (c = 7)
........1.05 (c = 5)
........1.06 (c = 6)
......1.11 (c = 11)
........1.05 (c = 5)
........1.09 (c = 9)
..........1.06 (c = 6)
........1.1 (c = 10)
......1.13 (c = 13)
........1.06 (c = 6)
..........1.05 (c = 5)
........1.09 (c = 9)
....1.16 (c = 16)
..2.17 (c = 29.5)
....2.08 (c = 20.5)
......2.06 (c = 18.5)
........2.05 (c = 17.5)
......2.07 (c = 19.5)
........2.05 (c = 17.5)
....2.12 (c = 24.5)
......2.06 (c = 18.5)
........2.05 (c = 17.5)
......2.09 (c = 21.5)
........2.07 (c = 19.5)
..........2.05 (c = 17.5)
......2.1 (c = 22.5)
........2.05 (c = 17.5)
........2.07 (c = 19.5)
......2.11 (c = 23.5)
........2.05 (c = 17.5)
....2.14 (c = 26.5)
......2.07 (c = 19.5)
........2.05 (c = 17.5)
........2.06 (c = 18.5)
......2.1 (c = 22.5)
........2.05 (c = 17.5)
........2.09 (c = 21.5)
..........2.06 (c = 18.5)
......2.13 (c = 25.5)
........2.06 (c = 18.5)
..........2.05 (c = 17.5)
........2.09 (c = 21.5)
........2.11 (c = 23.5)
..........2.05 (c = 17.5)
....2.15 (c = 27.5)
......2.07 (c = 19.5)
........2.05 (c = 17.5)
........2.06 (c = 18.5)
......2.11 (c = 23.5)
........2.05 (c = 17.5)
........2.09 (c = 21.5)
..........2.06 (c = 18.5)
........2.1 (c = 22.5)
......2.13 (c = 25.5)
........2.06 (c = 18.5)
..........2.05 (c = 17.5)
........2.09 (c = 21.5)
....2.16 (c = 28.5)
..3.08 (c = 33)
....3.06 (c = 31)
......3.05 (c = 30)
....3.07 (c = 32)
......3.05 (c = 30)
..3.12 (c = 37)
....3.06 (c = 31)
......3.05 (c = 30)
....3.09 (c = 34)"
`;

exports[`Gen.float().between(1, 10).betweenPrecision(0, 2) 1`] = `
"6.9 (c = 147.14285714285714)
..2.9 (c = 90)
....2 (c = 0)
....2.4 (c = 40)
......2.2 (c = 20)
........2.1 (c = 10)
......2.3 (c = 30)
........2.1 (c = 10)
....2.6 (c = 60)
......2.3 (c = 30)
........2.1 (c = 10)
........2.2 (c = 20)
......2.5 (c = 50)
........2.2 (c = 20)
..........2.1 (c = 10)
....2.7 (c = 70)
......2.3 (c = 30)
........2.1 (c = 10)
........2.2 (c = 20)
......2.5 (c = 50)
........2.2 (c = 20)
..........2.1 (c = 10)
....2.8 (c = 80)
..4.9 (c = 118.57142857142857)
....3.9 (c = 104.28571428571429)
......3 (c = 14.285714285714286)
......3.4 (c = 54.285714285714285)
........3.2 (c = 34.285714285714285)
..........3.1 (c = 24.285714285714285)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
......3.6 (c = 74.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.7 (c = 84.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.8 (c = 94.28571428571429)
....4 (c = 28.571428571428573)
....4.4 (c = 68.57142857142857)
......4.2 (c = 48.57142857142857)
........4.1 (c = 38.57142857142857)
......4.3 (c = 58.57142857142857)
........4.1 (c = 38.57142857142857)
....4.6 (c = 88.57142857142857)
......4.3 (c = 58.57142857142857)
........4.1 (c = 38.57142857142857)
........4.2 (c = 48.57142857142857)
......4.5 (c = 78.57142857142857)
........4.2 (c = 48.57142857142857)
..........4.1 (c = 38.57142857142857)
....4.7 (c = 98.57142857142857)
......4.3 (c = 58.57142857142857)
........4.1 (c = 38.57142857142857)
........4.2 (c = 48.57142857142857)
......4.5 (c = 78.57142857142857)
........4.2 (c = 48.57142857142857)
..........4.1 (c = 38.57142857142857)
....4.8 (c = 108.57142857142857)
..5.9 (c = 132.85714285714286)
....3.9 (c = 104.28571428571429)
......3 (c = 14.285714285714286)
......3.4 (c = 54.285714285714285)
........3.2 (c = 34.285714285714285)
..........3.1 (c = 24.285714285714285)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
......3.6 (c = 74.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.7 (c = 84.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.8 (c = 94.28571428571429)
....5 (c = 42.857142857142854)
....5.4 (c = 82.85714285714286)
......5.2 (c = 62.857142857142854)
........5.1 (c = 52.857142857142854)
......5.3 (c = 72.85714285714286)
........5.1 (c = 52.857142857142854)
....5.6 (c = 102.85714285714286)
......5.3 (c = 72.85714285714286)
........5.1 (c = 52.857142857142854)
........5.2 (c = 62.857142857142854)"
`;

exports[`Gen.float().between(1, 10).betweenPrecision(0, 2) 2`] = `
"6.9 (c = 147.14285714285714)
..2.9 (c = 90)
....2 (c = 0)
....2.4 (c = 40)
......2.2 (c = 20)
........2.1 (c = 10)
......2.3 (c = 30)
........2.1 (c = 10)
....2.6 (c = 60)
......2.3 (c = 30)
........2.1 (c = 10)
........2.2 (c = 20)
......2.5 (c = 50)
........2.2 (c = 20)
..........2.1 (c = 10)
....2.7 (c = 70)
......2.3 (c = 30)
........2.1 (c = 10)
........2.2 (c = 20)
......2.5 (c = 50)
........2.2 (c = 20)
..........2.1 (c = 10)
....2.8 (c = 80)
..4.9 (c = 118.57142857142857)
....3.9 (c = 104.28571428571429)
......3 (c = 14.285714285714286)
......3.4 (c = 54.285714285714285)
........3.2 (c = 34.285714285714285)
..........3.1 (c = 24.285714285714285)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
......3.6 (c = 74.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.7 (c = 84.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.8 (c = 94.28571428571429)
....4 (c = 28.571428571428573)
....4.4 (c = 68.57142857142857)
......4.2 (c = 48.57142857142857)
........4.1 (c = 38.57142857142857)
......4.3 (c = 58.57142857142857)
........4.1 (c = 38.57142857142857)
....4.6 (c = 88.57142857142857)
......4.3 (c = 58.57142857142857)
........4.1 (c = 38.57142857142857)
........4.2 (c = 48.57142857142857)
......4.5 (c = 78.57142857142857)
........4.2 (c = 48.57142857142857)
..........4.1 (c = 38.57142857142857)
....4.7 (c = 98.57142857142857)
......4.3 (c = 58.57142857142857)
........4.1 (c = 38.57142857142857)
........4.2 (c = 48.57142857142857)
......4.5 (c = 78.57142857142857)
........4.2 (c = 48.57142857142857)
..........4.1 (c = 38.57142857142857)
....4.8 (c = 108.57142857142857)
..5.9 (c = 132.85714285714286)
....3.9 (c = 104.28571428571429)
......3 (c = 14.285714285714286)
......3.4 (c = 54.285714285714285)
........3.2 (c = 34.285714285714285)
..........3.1 (c = 24.285714285714285)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
......3.6 (c = 74.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.7 (c = 84.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.8 (c = 94.28571428571429)
....5 (c = 42.857142857142854)
....5.4 (c = 82.85714285714286)
......5.2 (c = 62.857142857142854)
........5.1 (c = 52.857142857142854)
......5.3 (c = 72.85714285714286)
........5.1 (c = 52.857142857142854)
....5.6 (c = 102.85714285714286)
......5.3 (c = 72.85714285714286)
........5.1 (c = 52.857142857142854)
........5.2 (c = 62.857142857142854)"
`;

exports[`Gen.float().between(1, 10).betweenPrecision(0, 2) 3`] = `
"6.9 (c = 147.14285714285714)
..2.9 (c = 90)
....2 (c = 0)
....2.4 (c = 40)
......2.2 (c = 20)
........2.1 (c = 10)
......2.3 (c = 30)
........2.1 (c = 10)
....2.6 (c = 60)
......2.3 (c = 30)
........2.1 (c = 10)
........2.2 (c = 20)
......2.5 (c = 50)
........2.2 (c = 20)
..........2.1 (c = 10)
....2.7 (c = 70)
......2.3 (c = 30)
........2.1 (c = 10)
........2.2 (c = 20)
......2.5 (c = 50)
........2.2 (c = 20)
..........2.1 (c = 10)
....2.8 (c = 80)
..4.9 (c = 118.57142857142857)
....3.9 (c = 104.28571428571429)
......3 (c = 14.285714285714286)
......3.4 (c = 54.285714285714285)
........3.2 (c = 34.285714285714285)
..........3.1 (c = 24.285714285714285)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
......3.6 (c = 74.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.7 (c = 84.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.8 (c = 94.28571428571429)
....4 (c = 28.571428571428573)
....4.4 (c = 68.57142857142857)
......4.2 (c = 48.57142857142857)
........4.1 (c = 38.57142857142857)
......4.3 (c = 58.57142857142857)
........4.1 (c = 38.57142857142857)
....4.6 (c = 88.57142857142857)
......4.3 (c = 58.57142857142857)
........4.1 (c = 38.57142857142857)
........4.2 (c = 48.57142857142857)
......4.5 (c = 78.57142857142857)
........4.2 (c = 48.57142857142857)
..........4.1 (c = 38.57142857142857)
....4.7 (c = 98.57142857142857)
......4.3 (c = 58.57142857142857)
........4.1 (c = 38.57142857142857)
........4.2 (c = 48.57142857142857)
......4.5 (c = 78.57142857142857)
........4.2 (c = 48.57142857142857)
..........4.1 (c = 38.57142857142857)
....4.8 (c = 108.57142857142857)
..5.9 (c = 132.85714285714286)
....3.9 (c = 104.28571428571429)
......3 (c = 14.285714285714286)
......3.4 (c = 54.285714285714285)
........3.2 (c = 34.285714285714285)
..........3.1 (c = 24.285714285714285)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
......3.6 (c = 74.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.7 (c = 84.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.8 (c = 94.28571428571429)
....5 (c = 42.857142857142854)
....5.4 (c = 82.85714285714286)
......5.2 (c = 62.857142857142854)
........5.1 (c = 52.857142857142854)
......5.3 (c = 72.85714285714286)
........5.1 (c = 52.857142857142854)
....5.6 (c = 102.85714285714286)
......5.3 (c = 72.85714285714286)
........5.1 (c = 52.857142857142854)
........5.2 (c = 62.857142857142854)"
`;

exports[`Gen.float().between(1, 10).betweenPrecision(0, 2) 4`] = `
"6.9 (c = 147.14285714285714)
..2.9 (c = 90)
....2 (c = 0)
....2.4 (c = 40)
......2.2 (c = 20)
........2.1 (c = 10)
......2.3 (c = 30)
........2.1 (c = 10)
....2.6 (c = 60)
......2.3 (c = 30)
........2.1 (c = 10)
........2.2 (c = 20)
......2.5 (c = 50)
........2.2 (c = 20)
..........2.1 (c = 10)
....2.7 (c = 70)
......2.3 (c = 30)
........2.1 (c = 10)
........2.2 (c = 20)
......2.5 (c = 50)
........2.2 (c = 20)
..........2.1 (c = 10)
....2.8 (c = 80)
..4.9 (c = 118.57142857142857)
....3.9 (c = 104.28571428571429)
......3 (c = 14.285714285714286)
......3.4 (c = 54.285714285714285)
........3.2 (c = 34.285714285714285)
..........3.1 (c = 24.285714285714285)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
......3.6 (c = 74.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.7 (c = 84.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.8 (c = 94.28571428571429)
....4 (c = 28.571428571428573)
....4.4 (c = 68.57142857142857)
......4.2 (c = 48.57142857142857)
........4.1 (c = 38.57142857142857)
......4.3 (c = 58.57142857142857)
........4.1 (c = 38.57142857142857)
....4.6 (c = 88.57142857142857)
......4.3 (c = 58.57142857142857)
........4.1 (c = 38.57142857142857)
........4.2 (c = 48.57142857142857)
......4.5 (c = 78.57142857142857)
........4.2 (c = 48.57142857142857)
..........4.1 (c = 38.57142857142857)
....4.7 (c = 98.57142857142857)
......4.3 (c = 58.57142857142857)
........4.1 (c = 38.57142857142857)
........4.2 (c = 48.57142857142857)
......4.5 (c = 78.57142857142857)
........4.2 (c = 48.57142857142857)
..........4.1 (c = 38.57142857142857)
....4.8 (c = 108.57142857142857)
..5.9 (c = 132.85714285714286)
....3.9 (c = 104.28571428571429)
......3 (c = 14.285714285714286)
......3.4 (c = 54.285714285714285)
........3.2 (c = 34.285714285714285)
..........3.1 (c = 24.285714285714285)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
......3.6 (c = 74.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.7 (c = 84.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.8 (c = 94.28571428571429)
....5 (c = 42.857142857142854)
....5.4 (c = 82.85714285714286)
......5.2 (c = 62.857142857142854)
........5.1 (c = 52.857142857142854)
......5.3 (c = 72.85714285714286)
........5.1 (c = 52.857142857142854)
....5.6 (c = 102.85714285714286)
......5.3 (c = 72.85714285714286)
........5.1 (c = 52.857142857142854)
........5.2 (c = 62.857142857142854)"
`;

exports[`Gen.float().between(1, 10).betweenPrecision(0, 2) 5`] = `
"6.9 (c = 147.14285714285714)
..2.9 (c = 90)
....2 (c = 0)
....2.4 (c = 40)
......2.2 (c = 20)
........2.1 (c = 10)
......2.3 (c = 30)
........2.1 (c = 10)
....2.6 (c = 60)
......2.3 (c = 30)
........2.1 (c = 10)
........2.2 (c = 20)
......2.5 (c = 50)
........2.2 (c = 20)
..........2.1 (c = 10)
....2.7 (c = 70)
......2.3 (c = 30)
........2.1 (c = 10)
........2.2 (c = 20)
......2.5 (c = 50)
........2.2 (c = 20)
..........2.1 (c = 10)
....2.8 (c = 80)
..4.9 (c = 118.57142857142857)
....3.9 (c = 104.28571428571429)
......3 (c = 14.285714285714286)
......3.4 (c = 54.285714285714285)
........3.2 (c = 34.285714285714285)
..........3.1 (c = 24.285714285714285)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
......3.6 (c = 74.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.7 (c = 84.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.8 (c = 94.28571428571429)
....4 (c = 28.571428571428573)
....4.4 (c = 68.57142857142857)
......4.2 (c = 48.57142857142857)
........4.1 (c = 38.57142857142857)
......4.3 (c = 58.57142857142857)
........4.1 (c = 38.57142857142857)
....4.6 (c = 88.57142857142857)
......4.3 (c = 58.57142857142857)
........4.1 (c = 38.57142857142857)
........4.2 (c = 48.57142857142857)
......4.5 (c = 78.57142857142857)
........4.2 (c = 48.57142857142857)
..........4.1 (c = 38.57142857142857)
....4.7 (c = 98.57142857142857)
......4.3 (c = 58.57142857142857)
........4.1 (c = 38.57142857142857)
........4.2 (c = 48.57142857142857)
......4.5 (c = 78.57142857142857)
........4.2 (c = 48.57142857142857)
..........4.1 (c = 38.57142857142857)
....4.8 (c = 108.57142857142857)
..5.9 (c = 132.85714285714286)
....3.9 (c = 104.28571428571429)
......3 (c = 14.285714285714286)
......3.4 (c = 54.285714285714285)
........3.2 (c = 34.285714285714285)
..........3.1 (c = 24.285714285714285)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
......3.6 (c = 74.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.7 (c = 84.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.8 (c = 94.28571428571429)
....5 (c = 42.857142857142854)
....5.4 (c = 82.85714285714286)
......5.2 (c = 62.857142857142854)
........5.1 (c = 52.857142857142854)
......5.3 (c = 72.85714285714286)
........5.1 (c = 52.857142857142854)
....5.6 (c = 102.85714285714286)
......5.3 (c = 72.85714285714286)
........5.1 (c = 52.857142857142854)
........5.2 (c = 62.857142857142854)"
`;

exports[`Gen.float().between(1, 10).betweenPrecision(0, 2) 6`] = `
"6.9 (c = 147.14285714285714)
..2.9 (c = 90)
....2 (c = 0)
....2.4 (c = 40)
......2.2 (c = 20)
........2.1 (c = 10)
......2.3 (c = 30)
........2.1 (c = 10)
....2.6 (c = 60)
......2.3 (c = 30)
........2.1 (c = 10)
........2.2 (c = 20)
......2.5 (c = 50)
........2.2 (c = 20)
..........2.1 (c = 10)
....2.7 (c = 70)
......2.3 (c = 30)
........2.1 (c = 10)
........2.2 (c = 20)
......2.5 (c = 50)
........2.2 (c = 20)
..........2.1 (c = 10)
....2.8 (c = 80)
..4.9 (c = 118.57142857142857)
....3.9 (c = 104.28571428571429)
......3 (c = 14.285714285714286)
......3.4 (c = 54.285714285714285)
........3.2 (c = 34.285714285714285)
..........3.1 (c = 24.285714285714285)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
......3.6 (c = 74.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.7 (c = 84.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.8 (c = 94.28571428571429)
....4 (c = 28.571428571428573)
....4.4 (c = 68.57142857142857)
......4.2 (c = 48.57142857142857)
........4.1 (c = 38.57142857142857)
......4.3 (c = 58.57142857142857)
........4.1 (c = 38.57142857142857)
....4.6 (c = 88.57142857142857)
......4.3 (c = 58.57142857142857)
........4.1 (c = 38.57142857142857)
........4.2 (c = 48.57142857142857)
......4.5 (c = 78.57142857142857)
........4.2 (c = 48.57142857142857)
..........4.1 (c = 38.57142857142857)
....4.7 (c = 98.57142857142857)
......4.3 (c = 58.57142857142857)
........4.1 (c = 38.57142857142857)
........4.2 (c = 48.57142857142857)
......4.5 (c = 78.57142857142857)
........4.2 (c = 48.57142857142857)
..........4.1 (c = 38.57142857142857)
....4.8 (c = 108.57142857142857)
..5.9 (c = 132.85714285714286)
....3.9 (c = 104.28571428571429)
......3 (c = 14.285714285714286)
......3.4 (c = 54.285714285714285)
........3.2 (c = 34.285714285714285)
..........3.1 (c = 24.285714285714285)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
......3.6 (c = 74.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.7 (c = 84.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.8 (c = 94.28571428571429)
....5 (c = 42.857142857142854)
....5.4 (c = 82.85714285714286)
......5.2 (c = 62.857142857142854)
........5.1 (c = 52.857142857142854)
......5.3 (c = 72.85714285714286)
........5.1 (c = 52.857142857142854)
....5.6 (c = 102.85714285714286)
......5.3 (c = 72.85714285714286)
........5.1 (c = 52.857142857142854)
........5.2 (c = 62.857142857142854)"
`;

exports[`Gen.float().between(1, 10).betweenPrecision(0, 2) 7`] = `
"6.9 (c = 147.14285714285714)
..2.9 (c = 90)
....2 (c = 0)
....2.4 (c = 40)
......2.2 (c = 20)
........2.1 (c = 10)
......2.3 (c = 30)
........2.1 (c = 10)
....2.6 (c = 60)
......2.3 (c = 30)
........2.1 (c = 10)
........2.2 (c = 20)
......2.5 (c = 50)
........2.2 (c = 20)
..........2.1 (c = 10)
....2.7 (c = 70)
......2.3 (c = 30)
........2.1 (c = 10)
........2.2 (c = 20)
......2.5 (c = 50)
........2.2 (c = 20)
..........2.1 (c = 10)
....2.8 (c = 80)
..4.9 (c = 118.57142857142857)
....3.9 (c = 104.28571428571429)
......3 (c = 14.285714285714286)
......3.4 (c = 54.285714285714285)
........3.2 (c = 34.285714285714285)
..........3.1 (c = 24.285714285714285)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
......3.6 (c = 74.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.7 (c = 84.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.8 (c = 94.28571428571429)
....4 (c = 28.571428571428573)
....4.4 (c = 68.57142857142857)
......4.2 (c = 48.57142857142857)
........4.1 (c = 38.57142857142857)
......4.3 (c = 58.57142857142857)
........4.1 (c = 38.57142857142857)
....4.6 (c = 88.57142857142857)
......4.3 (c = 58.57142857142857)
........4.1 (c = 38.57142857142857)
........4.2 (c = 48.57142857142857)
......4.5 (c = 78.57142857142857)
........4.2 (c = 48.57142857142857)
..........4.1 (c = 38.57142857142857)
....4.7 (c = 98.57142857142857)
......4.3 (c = 58.57142857142857)
........4.1 (c = 38.57142857142857)
........4.2 (c = 48.57142857142857)
......4.5 (c = 78.57142857142857)
........4.2 (c = 48.57142857142857)
..........4.1 (c = 38.57142857142857)
....4.8 (c = 108.57142857142857)
..5.9 (c = 132.85714285714286)
....3.9 (c = 104.28571428571429)
......3 (c = 14.285714285714286)
......3.4 (c = 54.285714285714285)
........3.2 (c = 34.285714285714285)
..........3.1 (c = 24.285714285714285)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
......3.6 (c = 74.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.7 (c = 84.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.8 (c = 94.28571428571429)
....5 (c = 42.857142857142854)
....5.4 (c = 82.85714285714286)
......5.2 (c = 62.857142857142854)
........5.1 (c = 52.857142857142854)
......5.3 (c = 72.85714285714286)
........5.1 (c = 52.857142857142854)
....5.6 (c = 102.85714285714286)
......5.3 (c = 72.85714285714286)
........5.1 (c = 52.857142857142854)
........5.2 (c = 62.857142857142854)"
`;

exports[`Gen.float().between(1, 10).betweenPrecision(0, 2) 8`] = `
"6.9 (c = 147.14285714285714)
..2.9 (c = 90)
....2 (c = 0)
....2.4 (c = 40)
......2.2 (c = 20)
........2.1 (c = 10)
......2.3 (c = 30)
........2.1 (c = 10)
....2.6 (c = 60)
......2.3 (c = 30)
........2.1 (c = 10)
........2.2 (c = 20)
......2.5 (c = 50)
........2.2 (c = 20)
..........2.1 (c = 10)
....2.7 (c = 70)
......2.3 (c = 30)
........2.1 (c = 10)
........2.2 (c = 20)
......2.5 (c = 50)
........2.2 (c = 20)
..........2.1 (c = 10)
....2.8 (c = 80)
..4.9 (c = 118.57142857142857)
....3.9 (c = 104.28571428571429)
......3 (c = 14.285714285714286)
......3.4 (c = 54.285714285714285)
........3.2 (c = 34.285714285714285)
..........3.1 (c = 24.285714285714285)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
......3.6 (c = 74.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.7 (c = 84.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.8 (c = 94.28571428571429)
....4 (c = 28.571428571428573)
....4.4 (c = 68.57142857142857)
......4.2 (c = 48.57142857142857)
........4.1 (c = 38.57142857142857)
......4.3 (c = 58.57142857142857)
........4.1 (c = 38.57142857142857)
....4.6 (c = 88.57142857142857)
......4.3 (c = 58.57142857142857)
........4.1 (c = 38.57142857142857)
........4.2 (c = 48.57142857142857)
......4.5 (c = 78.57142857142857)
........4.2 (c = 48.57142857142857)
..........4.1 (c = 38.57142857142857)
....4.7 (c = 98.57142857142857)
......4.3 (c = 58.57142857142857)
........4.1 (c = 38.57142857142857)
........4.2 (c = 48.57142857142857)
......4.5 (c = 78.57142857142857)
........4.2 (c = 48.57142857142857)
..........4.1 (c = 38.57142857142857)
....4.8 (c = 108.57142857142857)
..5.9 (c = 132.85714285714286)
....3.9 (c = 104.28571428571429)
......3 (c = 14.285714285714286)
......3.4 (c = 54.285714285714285)
........3.2 (c = 34.285714285714285)
..........3.1 (c = 24.285714285714285)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
......3.6 (c = 74.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.7 (c = 84.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.8 (c = 94.28571428571429)
....5 (c = 42.857142857142854)
....5.4 (c = 82.85714285714286)
......5.2 (c = 62.857142857142854)
........5.1 (c = 52.857142857142854)
......5.3 (c = 72.85714285714286)
........5.1 (c = 52.857142857142854)
....5.6 (c = 102.85714285714286)
......5.3 (c = 72.85714285714286)
........5.1 (c = 52.857142857142854)
........5.2 (c = 62.857142857142854)"
`;

exports[`Gen.float().between(1, 10).betweenPrecision(0, 2) 9`] = `
"6.9 (c = 147.14285714285714)
..2.9 (c = 90)
....2 (c = 0)
....2.4 (c = 40)
......2.2 (c = 20)
........2.1 (c = 10)
......2.3 (c = 30)
........2.1 (c = 10)
....2.6 (c = 60)
......2.3 (c = 30)
........2.1 (c = 10)
........2.2 (c = 20)
......2.5 (c = 50)
........2.2 (c = 20)
..........2.1 (c = 10)
....2.7 (c = 70)
......2.3 (c = 30)
........2.1 (c = 10)
........2.2 (c = 20)
......2.5 (c = 50)
........2.2 (c = 20)
..........2.1 (c = 10)
....2.8 (c = 80)
..4.9 (c = 118.57142857142857)
....3.9 (c = 104.28571428571429)
......3 (c = 14.285714285714286)
......3.4 (c = 54.285714285714285)
........3.2 (c = 34.285714285714285)
..........3.1 (c = 24.285714285714285)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
......3.6 (c = 74.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.7 (c = 84.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.8 (c = 94.28571428571429)
....4 (c = 28.571428571428573)
....4.4 (c = 68.57142857142857)
......4.2 (c = 48.57142857142857)
........4.1 (c = 38.57142857142857)
......4.3 (c = 58.57142857142857)
........4.1 (c = 38.57142857142857)
....4.6 (c = 88.57142857142857)
......4.3 (c = 58.57142857142857)
........4.1 (c = 38.57142857142857)
........4.2 (c = 48.57142857142857)
......4.5 (c = 78.57142857142857)
........4.2 (c = 48.57142857142857)
..........4.1 (c = 38.57142857142857)
....4.7 (c = 98.57142857142857)
......4.3 (c = 58.57142857142857)
........4.1 (c = 38.57142857142857)
........4.2 (c = 48.57142857142857)
......4.5 (c = 78.57142857142857)
........4.2 (c = 48.57142857142857)
..........4.1 (c = 38.57142857142857)
....4.8 (c = 108.57142857142857)
..5.9 (c = 132.85714285714286)
....3.9 (c = 104.28571428571429)
......3 (c = 14.285714285714286)
......3.4 (c = 54.285714285714285)
........3.2 (c = 34.285714285714285)
..........3.1 (c = 24.285714285714285)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
......3.6 (c = 74.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.7 (c = 84.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.8 (c = 94.28571428571429)
....5 (c = 42.857142857142854)
....5.4 (c = 82.85714285714286)
......5.2 (c = 62.857142857142854)
........5.1 (c = 52.857142857142854)
......5.3 (c = 72.85714285714286)
........5.1 (c = 52.857142857142854)
....5.6 (c = 102.85714285714286)
......5.3 (c = 72.85714285714286)
........5.1 (c = 52.857142857142854)
........5.2 (c = 62.857142857142854)"
`;

exports[`Gen.float().between(1, 10).betweenPrecision(0, 2) 10`] = `
"6.9 (c = 147.14285714285714)
..2.9 (c = 90)
....2 (c = 0)
....2.4 (c = 40)
......2.2 (c = 20)
........2.1 (c = 10)
......2.3 (c = 30)
........2.1 (c = 10)
....2.6 (c = 60)
......2.3 (c = 30)
........2.1 (c = 10)
........2.2 (c = 20)
......2.5 (c = 50)
........2.2 (c = 20)
..........2.1 (c = 10)
....2.7 (c = 70)
......2.3 (c = 30)
........2.1 (c = 10)
........2.2 (c = 20)
......2.5 (c = 50)
........2.2 (c = 20)
..........2.1 (c = 10)
....2.8 (c = 80)
..4.9 (c = 118.57142857142857)
....3.9 (c = 104.28571428571429)
......3 (c = 14.285714285714286)
......3.4 (c = 54.285714285714285)
........3.2 (c = 34.285714285714285)
..........3.1 (c = 24.285714285714285)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
......3.6 (c = 74.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.7 (c = 84.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.8 (c = 94.28571428571429)
....4 (c = 28.571428571428573)
....4.4 (c = 68.57142857142857)
......4.2 (c = 48.57142857142857)
........4.1 (c = 38.57142857142857)
......4.3 (c = 58.57142857142857)
........4.1 (c = 38.57142857142857)
....4.6 (c = 88.57142857142857)
......4.3 (c = 58.57142857142857)
........4.1 (c = 38.57142857142857)
........4.2 (c = 48.57142857142857)
......4.5 (c = 78.57142857142857)
........4.2 (c = 48.57142857142857)
..........4.1 (c = 38.57142857142857)
....4.7 (c = 98.57142857142857)
......4.3 (c = 58.57142857142857)
........4.1 (c = 38.57142857142857)
........4.2 (c = 48.57142857142857)
......4.5 (c = 78.57142857142857)
........4.2 (c = 48.57142857142857)
..........4.1 (c = 38.57142857142857)
....4.8 (c = 108.57142857142857)
..5.9 (c = 132.85714285714286)
....3.9 (c = 104.28571428571429)
......3 (c = 14.285714285714286)
......3.4 (c = 54.285714285714285)
........3.2 (c = 34.285714285714285)
..........3.1 (c = 24.285714285714285)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
......3.6 (c = 74.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.7 (c = 84.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.8 (c = 94.28571428571429)
....5 (c = 42.857142857142854)
....5.4 (c = 82.85714285714286)
......5.2 (c = 62.857142857142854)
........5.1 (c = 52.857142857142854)
......5.3 (c = 72.85714285714286)
........5.1 (c = 52.857142857142854)
....5.6 (c = 102.85714285714286)
......5.3 (c = 72.85714285714286)
........5.1 (c = 52.857142857142854)
........5.2 (c = 62.857142857142854)"
`;

exports[`Gen.float().between(1, 10).betweenPrecision(0, 2) 11`] = `
"6.9 (c = 147.14285714285714)
..2.9 (c = 90)
....2 (c = 0)
....2.4 (c = 40)
......2.2 (c = 20)
........2.1 (c = 10)
......2.3 (c = 30)
........2.1 (c = 10)
....2.6 (c = 60)
......2.3 (c = 30)
........2.1 (c = 10)
........2.2 (c = 20)
......2.5 (c = 50)
........2.2 (c = 20)
..........2.1 (c = 10)
....2.7 (c = 70)
......2.3 (c = 30)
........2.1 (c = 10)
........2.2 (c = 20)
......2.5 (c = 50)
........2.2 (c = 20)
..........2.1 (c = 10)
....2.8 (c = 80)
..4.9 (c = 118.57142857142857)
....3.9 (c = 104.28571428571429)
......3 (c = 14.285714285714286)
......3.4 (c = 54.285714285714285)
........3.2 (c = 34.285714285714285)
..........3.1 (c = 24.285714285714285)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
......3.6 (c = 74.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.7 (c = 84.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.8 (c = 94.28571428571429)
....4 (c = 28.571428571428573)
....4.4 (c = 68.57142857142857)
......4.2 (c = 48.57142857142857)
........4.1 (c = 38.57142857142857)
......4.3 (c = 58.57142857142857)
........4.1 (c = 38.57142857142857)
....4.6 (c = 88.57142857142857)
......4.3 (c = 58.57142857142857)
........4.1 (c = 38.57142857142857)
........4.2 (c = 48.57142857142857)
......4.5 (c = 78.57142857142857)
........4.2 (c = 48.57142857142857)
..........4.1 (c = 38.57142857142857)
....4.7 (c = 98.57142857142857)
......4.3 (c = 58.57142857142857)
........4.1 (c = 38.57142857142857)
........4.2 (c = 48.57142857142857)
......4.5 (c = 78.57142857142857)
........4.2 (c = 48.57142857142857)
..........4.1 (c = 38.57142857142857)
....4.8 (c = 108.57142857142857)
..5.9 (c = 132.85714285714286)
....3.9 (c = 104.28571428571429)
......3 (c = 14.285714285714286)
......3.4 (c = 54.285714285714285)
........3.2 (c = 34.285714285714285)
..........3.1 (c = 24.285714285714285)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
......3.6 (c = 74.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.7 (c = 84.28571428571429)
........3.3 (c = 44.285714285714285)
..........3.1 (c = 24.285714285714285)
..........3.2 (c = 34.285714285714285)
........3.5 (c = 64.28571428571429)
..........3.2 (c = 34.285714285714285)
............3.1 (c = 24.285714285714285)
......3.8 (c = 94.28571428571429)
....5 (c = 42.857142857142854)
....5.4 (c = 82.85714285714286)
......5.2 (c = 62.857142857142854)
........5.1 (c = 52.857142857142854)
......5.3 (c = 72.85714285714286)
........5.1 (c = 52.857142857142854)
....5.6 (c = 102.85714285714286)
......5.3 (c = 72.85714285714286)
........5.1 (c = 52.857142857142854)
........5.2 (c = 62.857142857142854)"
`;
